# ParallelFourierSolver

./: .gitignore  CMakeLists.txt  README.md  README.txt  Thumbs.db  export_cluster.sh
cmake/: FindMKL.cmake  function.cmake
files/: field_solver_test_B_1.csv  field_solver_test_B_12.csv  field_solver_test_B_2.csv  field_solver_test_B_3.csv  field_solver_test_B_4.csv  field_solver_test_B_5.csv  field_solver_test_B_6.csv  field_solver_test_B_7.csv  field_solver_test_B_8.csv  field_solver_test_E_0.csv  field_solver_test_E_1.csv  field_solver_test_E_12.csv  field_solver_test_E_2.csv  field_solver_test_E_3.csv  field_solver_test_E_4.csv  field_solver_test_E_5.csv  field_solver_test_E_6.csv  field_solver_test_E_7.csv  field_solver_test_E_8.csv  graphics.7z  погрешность.xlsx
include/: _double.h  array3d.h  class_member_ptr.h  constants.h  current_deposition.h  dataReader.h  dateWriter.h  field_interpolation.h  field_solver.h  file_writer.h  fourier_transformation.h  grid2d.h  grid3d.h  masks.h  mpi_worker.h  mpi_worker_pulse.h  mpi_wrapper.h  my_complex.h  operations_with_arrays.h  particle.h  particle_push.h  plasma_system.h  pulse.h  recalc_coord.h  running_wave.h  running_wave_with_high_frequency.h  simple_types.h  simple_types_and_constants.h  spherical_wave.h  standing_wave.h  test_parallel.h  test_running_wave_parallel.h  test_running_wave_with_high_frequency_parallel.h  test_spherical_wave_parallel.h  test_standing_wave_parallel.h  vec.h  write_file.h
scripts/: calculate_dispersion.py  calculate_energy.py  graph.py  graph_mat_plot_lib.py  plot_all_graphics_for_pulse.py  plot_all_graphs_1d.py  plot_all_graphs_2d.py  plot_consistent_iterations.py
sln/: FourierFieldSolver.sln
src/: CMakeLists.txt  cmake_install.cmake  current_deposition.cpp  dataReader.cpp  field_interpolation.cpp  field_solver_MPI.cpp  field_solver_PSATD.cpp  field_solver_PSATD_MPI.cpp  field_solver_PSTD.cpp  field_solver_diff.cpp  field_solver_parallel.cpp  field_solver_parallel_PSATD.cpp  fourier_transformation.cpp  grid2d.cpp  grid3d.cpp  main.cpp  main_consistent_field_solver_running_wave.cpp  main_parallel_field_solver.cpp  main_parallel_field_solver_running_wave.cpp  main_parallel_field_solver_running_wave_with_high_frequency.cpp  main_parallel_field_solver_spherical_wave.cpp  main_parallel_field_solver_standing_wave.cpp  mpi_worker.cpp  operations_with_arrays.cpp  particle.cpp  particle_push.cpp  plasma_system.cpp  write_file.cpp
src/Examples/RunningWave/: CMakeLists.txt
src/Examples/RunningWave/ConsistentFieldSolver_RunningWave/: CMakeLists.txt
src/Examples/RunningWave/ConsistentFieldSolver_RunningWave/src/: main_consistent_field_solver_running_wave.cpp
src/Examples/RunningWave/ParallelFieldSolver_RunningWave/: CMakeLists.txt
src/Examples/RunningWave/ParallelFieldSolver_RunningWave/include/: test_running_wave_parallel.h
src/Examples/RunningWave/ParallelFieldSolver_RunningWave/src/: main_parallel_field_solver_running_wave.cpp
src/Examples/RunningWave/SequentialFieldSolver_RunningWave/: CMakeLists.txt
src/Examples/RunningWave/include/: parser_running_wave.h  running_wave.h
src/Examples/RunningWave/src/ConsistentFieldSolver_RunningWave/: main_consistent_field_solver_running_wave.cpp
src/Examples/SphericalWave/: CMakeLists.txt
src/Examples/SphericalWave/ConsistentFieldSolver_SphericalWave/: CMakeLists.txt
src/Examples/SphericalWave/ConsistentFieldSolver_SphericalWave/src/: main_consistent_field_solver_spherical_wave.cpp
src/Examples/SphericalWave/ParallelFieldSolver_SphericalWave/: CMakeLists.txt
src/Examples/SphericalWave/ParallelFieldSolver_SphericalWave/include/: test_spherical_wave_parallel.h
src/Examples/SphericalWave/ParallelFieldSolver_SphericalWave/src/: main_parallel_field_solver_spherical_wave.cpp
src/Examples/SphericalWave/SequentialFieldSolver_SphericalWave/: CMakeLists.txt
src/Examples/SphericalWave/include/: parser_spherical_wave.h  spherical_wave.h
src/FourierFieldSolver/: CMakeLists.txt
src/FourierFieldSolver/include/: array3d.h  class_member_ptr.h  field_solver.h  file_writer.h  filter.h  fourier_transformation.h  grid3d.h  mask.h  masks.h  mpi_worker.h  mpi_worker_copy.h  mpi_worker_new.h  mpi_wrapper.h  mpi_wrapper_3d.h  my_complex.h  operations_with_arrays.h  physical_constants.h  status.h  vec.h
src/FourierFieldSolver/src/: field_solver_FDTD.cpp  field_solver_PSATD.cpp  field_solver_PSATD_omp.cpp  field_solver_PSTD.cpp  field_solver_parallel.cpp  file_writer.cpp  filter.cpp  fourier_transformation.cpp  grid3d.cpp  mask.cpp  mpi_worker.cpp  mpi_worker_copy.cpp  mpi_worker_new.cpp  operations_with_arrays.cpp
src/tasks/running_wave/: CMakeLists.txt
src/tasks/running_wave/include/: running_wave.h
src/tasks/running_wave/running_wave_just_parallel/: CMakeLists.txt
src/tasks/running_wave/running_wave_just_parallel/include/: test_running_wave_just_parallel.h
src/tasks/running_wave/running_wave_mpi_fftw/: CMakeLists.txt
src/tasks/running_wave/running_wave_mpi_fftw/src/: main_running_wave_mpi_fftw.cpp
src/tasks/running_wave/running_wave_parallel/: CMakeLists.txt
src/tasks/running_wave/running_wave_parallel/include/: test_running_wave_parallel.h
src/tasks/running_wave/running_wave_parallel/src/: main_parallel_field_solver_running_wave.cpp
src/tasks/running_wave/running_wave_sequential/: CMakeLists.txt
src/tasks/running_wave/running_wave_sequential/src/: main_sequential_field_solver_running_wave.cpp
test/: CMakeLists.txt  class_member_ptr.h  field_solver_for_testing.h  test_base.cpp  test_curDep.cpp  test_fieldSolver.cpp  test_fieldSolver_pulse.cpp  test_fieldSolver_sinus.cpp  test_field_solver_running_wave.cpp  test_field_solver_running_wave_with_high_frequency.cpp  test_field_solver_spherical_wave.cpp  test_general.cpp  (+13 more)
test/Tests/: CMakeLists.txt  test_field_solver_spherical_wave.cpp  test_mpi_worker.cpp  test_vec.cpp
test/Tests/src/: test_field_solver_running_wave.cpp  test_field_solver_spherical_wave.cpp  test_fourier_transformation.cpp  test_grid3d.cpp  test_lag.cpp  test_mpi_worker.cpp  test_my_complex.cpp  test_vec.cpp
(+336 files in other folders)
