include_directories(
    ${MPI_DIR}
    ${FFTW_DIR}
    include
    src)

add_library(FourierFieldSolver
    ${FFTW_DIR}/fftw3.h
    include/array3d.h
    include/class_member_ptr.h
    include/field_solver.h
    include/file_writer.h
    include/fourier_transformation.h
    include/grid3d.h
    include/masks.h
    include/mpi_worker.h
    include/mpi_wrapper.h
    include/my_complex.h
    include/operations_with_arrays.h
    include/physical_constants.h
    include/simple_types_and_constants.h
    include/vec.h

    src/field_solver_parallel.cpp
    src/field_solver_PSATD.cpp
    src/field_solver_PSTD.cpp
    src/file_writer.cpp
    src/fourier_transformation.cpp
    src/grid3d.cpp
    src/mpi_worker.cpp
    src/operations_with_arrays.cpp)
